<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/home"

            android:title="@string/main" />
        <item
            android:id="@+id/nav_debtor"
            android:icon="@drawable/man_user"
            android:title="@string/debtor" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_clock_button"
            android:title="@string/history" />
    </group>
    <group  android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/info"
            android:title="@string/about" />
    </group>


</menu>
